# unkey

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini  unkey.py
.github/workflows/: main.yml
tests/: attrs_test.py  builtins_test.py  comprehension_test.py  filter_test.py  fix_test.py  for_test.py  funcs_test.py  functional_test.py  in_test.py  join_test.py  literals_test.py  main_test.py  zip_test.py
