[metadata]
name = unkey
version = 0.0.0
description = A tool to automatically remove extra calls to keys().
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxr/unkey
author = Max R
author_email = maxr@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = unkey
install_requires =
    tokenize-rt>=3.2.0
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    unkey = unkey:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
